# social-dashboard

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  cd_check.yml  cd_end.yml  ci.yml
dbt/: .gitignore  dbt_project.yml  profiles.yml
dbt/macros/: range_sum_value.sql  test_is_over.sql
dbt/models/component/: jasso_gakuseiseikatsu_stats_annual_income_divide_university_type_and_income.sql  schema.yml
dbt/models/model/: annual_income_divide_5_quintile.sql  schema.yml
docs/: Gemfile  Makefile  _config.yml  index.md
docs/_posts/: 2021-06-13-annual-income-compare-average-and-university-students.md
runner/: Makefile
runner/clients/: data_catalog.py
runner/e-stat-importer/: main.py  pyproject.toml
runner/e-stat-kakei-chousa-importer/: Dockerfile  pyproject.toml
runner/jasso-gakuseiseikatsu-stats-importer/: Dockerfile  main.py  pyproject.toml
terraform/: .terraform.lock.hcl  catalog.tf  config.tf  dataset.tf  db.tf  network.tf  redash.tf  redis.tf  runners.tf  trigger.tf  variables.tf
terraform/runner/: main.tf  output.tf
