[tool.poetry]
name = "social_dashboard"
version = "0.1.0"
description = ""
authors = ["Katsuya Shimabukuro <katsu.generation.888@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cffi = "^1.14.5"
cryptography = "~=3.4"
dbt-core = "^0.20.0"
dbt-bigquery = "^0.20.0"
dbt-postgres = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
