[tool.poetry]
name = "jasso-gakuseiseikatsu-stats-importer"
version = "0.1.0"
description = ""
authors = ["Katsuya Shimabukuro <katsu.generation.888@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
fastapi = "^0.66.0"
google-cloud-datacatalog = "^3.2.0"
pandas = "^1.2.4"
openpyxl = "^3.0.7"
google-cloud-bigquery = "^2.20.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
requests = "^2.25.1"
google-cloud-storage = "^1.38.0"
pyarrow = "^4.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
flake8 = "^3.9.2"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
